[gd_scene load_steps=2 format=3 uid="uid://b7h2lovdatcxe"]

[ext_resource type="Script" path="res://scripts/demos/demo_menu.gd" id="1_menu"]

[node name="DemoMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Epic Online Services Integration for Godot"
horizontal_alignment = 1

[node name="StatusPanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0

[node name="StatusContainer" type="VBoxContainer" parent="VBoxContainer/StatusPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlatformStatus" type="Label" parent="VBoxContainer/StatusPanel/StatusContainer"]
layout_mode = 2
text = "Platform: Not Initialized"
horizontal_alignment = 1

[node name="UserStatus" type="Label" parent="VBoxContainer/StatusPanel/StatusContainer"]
layout_mode = 2
text = "User: Not Logged In"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DemosSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DemosTitle" type="Label" parent="VBoxContainer/DemosSection"]
layout_mode = 2
text = "Available Demos"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/DemosSection"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DemosGrid" type="GridContainer" parent="VBoxContainer/DemosSection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="AuthenticationPanel" type="Panel" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AuthenticationContainer" type="VBoxContainer" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/AuthenticationPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="AuthTitle" type="Label" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/AuthenticationPanel/AuthenticationContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "üîê Authentication

Login methods:
‚Ä¢ Epic Games account
‚Ä¢ Account portal
‚Ä¢ Device ID"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AuthButton" type="Button" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/AuthenticationPanel/AuthenticationContainer"]
layout_mode = 2
text = "Open Authentication Demo"

[node name="FriendsPanel" type="Panel" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FriendsContainer" type="VBoxContainer" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/FriendsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="FriendsTitle" type="Label" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/FriendsPanel/FriendsContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "üë• Friends

Friends functionality:
‚Ä¢ Query friends list
‚Ä¢ Get friend info
‚Ä¢ Display status

Requires authentication."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FriendsButton" type="Button" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/FriendsPanel/FriendsContainer"]
layout_mode = 2
text = "Open Friends Demo"

[node name="AchievementsPanel" type="Panel" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AchievementsContainer" type="VBoxContainer" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/AchievementsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="AchievementsTitle" type="Label" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/AchievementsPanel/AchievementsContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "üèÜ Achievements

Achievements system:
‚Ä¢ View player progress
‚Ä¢ Unlock achievements
‚Ä¢ Manage statistics"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AchievementsButton" type="Button" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/AchievementsPanel/AchievementsContainer"]
layout_mode = 2
text = "Open Achievements Demo"

[node name="LeaderboardsPanel" type="Panel" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeaderboardsContainer" type="VBoxContainer" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/LeaderboardsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeaderboardsTitle" type="Label" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/LeaderboardsPanel/LeaderboardsContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "üìä Leaderboards

Leaderboards system:
‚Ä¢ View rankings
‚Ä¢ Submit statistics
‚Ä¢ Track progress"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LeaderboardsButton" type="Button" parent="VBoxContainer/DemosSection/ScrollContainer/DemosGrid/LeaderboardsPanel/LeaderboardsContainer"]
layout_mode = 2
text = "Open Leaderboards Demo"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoTitle" type="Label" parent="VBoxContainer/InfoSection"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
text = "[color=yellow]Before using the demos:[/color]
1. Configure your Epic Games credentials in the [color=cyan]Authentication Demo[/color]
2. Initialize the EOS platform using the [color=green]Initialize EOS Platform[/color] button
3. Login using one of the available authentication methods
4. Explore the other demos to see EpicOS features in action

[color=red]Note: You need valid Epic Games Developer Portal credentials for most features to work properly.[/color]"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="FooterContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="VBoxContainer/FooterContainer"]
layout_mode = 2
text = "Exit Application"

[node name="RefreshButton" type="Button" parent="VBoxContainer/FooterContainer"]
layout_mode = 2
text = "Refresh Status"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/FooterContainer"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="VBoxContainer/FooterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "GodotEpic v1.0.0 - Epic Online Services Demo Suite"
horizontal_alignment = 2
vertical_alignment = 1
